Mise en place polices + CI reproductible
- Ajoute les polices vendues (Geist / Inter Tight) et centralise la typographie\n- Configure Tinymist (VS Code) pour utiliser fonts/ de manière reproductible\n- Corrige la table de couverture (ligne verticale continue, libellé département sur 1 ligne)\n- Ajoute un environnement Nix (flake) + scripts repo-local (prepare/build/ci/test_all)\n- Ajoute CI GitHub Actions qui exécute nix develop -c ./scripts/ci.sh\n- Génère un site GitHub Pages dans docs/ (index.html + PDFs)

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,12 @@
 *.log
 *.aux
 
+# GitHub Pages: on veut versionner les PDFs dans docs/
+!docs/*.pdf
+
 # Typst cache/output folders (optional)
 .typst/
+
+# Downloaded GitHub README caches (keep sources list tracked)
+cache/**
+!cache/sources.json
