Publier les PDFs en CI et sur GitHub Pages
- Génère docs/ via ./scripts/build_pages.sh dans GitHub Actions
- Upload docs/ en artifact (PDFs + index)
- Déploie docs/ sur GitHub Pages via upload-pages-artifact + deploy-pages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,11 @@ jobs:
       - name: Install Nix
         uses: cachix/install-nix-action@v27
 
-      - name: Run repo CI entrypoint
-        run: nix develop -c ./scripts/ci.sh
+      - name: Build PDFs + docs site
+        run: nix develop -c ./scripts/build_pages.sh
+
+      - name: Upload PDFs (docs/)
+        uses: actions/upload-artifact@v4
+        with:
+          name: compiled-pdfs
+          path: docs/
