Ne plus versionner docs/
- Ignore docs/ (généré par CI/Pages)
- Retire les PDFs et index.html de l’index Git

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 *.log
 *.aux
 
-# GitHub Pages: on veut versionner les PDFs dans docs/
-!docs/*.pdf
+# GitHub Pages: le site (docs/) est généré par CI
+docs/
 
 # Typst cache/output folders (optional)
 .typst/
