Automatiser cache/preview + améliorer couverture
- Simplifie cache/sources.json (id/annee/readme_url) et dérivations (semestre, out_dir, numero_cours)

- Génère des entrypoints *.generated.typ (prévisualisation Tinymist), ignorés par Git

- Ajoute clean_generated.sh et branche le générateur dans prepare_repo.sh

- Botin: département prof par défaut + override, et pluralisation Courriel(s)/Bureau(x)

- Auto-coche GitHub si 'Compte GitHub' est mentionné dans Matériel requis

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 # GitHub Pages: le site (docs/) est généré par CI
 docs/
 
+# Fichiers générés (prévisualisation Tinymist): wrappers .typ par cours
+generated/
+cours-*.generated.typ
+
 # Typst cache/output folders (optional)
 .typst/
 
